src/test/ui/dropck/drop-on-non-struct.stderr
error[E0412]: cannot find type `Nonexistent` in this scope
  --> $DIR/drop-on-non-struct.rs:9:15
   |
LL | impl Drop for Nonexistent {
   |               ^^^^^^^^^^^ not found in this scope

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/drop-on-non-struct.rs:1:1
   |
LL | impl<'a> Drop for &'a mut isize {
   | ^^^^^^^^^^^^^^^^^^-------------
   | |                 |
   | |                 `isize` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0120]: the `Drop` trait may only be implemented for structs, enums, and unions
  --> $DIR/drop-on-non-struct.rs:1:19
   |
LL | impl<'a> Drop for &'a mut isize {
   |                   ^^^^^^^^^^^^^ must be a struct, enum, or union

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0117, E0120, E0412.
For more information about an error, try `rustc --explain E0117`.
